--- a/genres.html
+++ b/genres.html
@@ -655,6 +655,7 @@
             </div>
           </div>
         </div>
+        </div>
         
         <!-- Partner Area Start Here  -->
         <div class="ms-partner-area fix pt-130 pb-130">
